add mailing list support with mailchimp

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
 
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
+
+  <script>
+    // Get the locale id somehow
+   document.locale = 'th';
+  </script>
 </body>
 </html>
