--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,23 @@
   <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <!-- ADD SEO CHUNKS! -->
+
+  <!-- Facebook -->
+  <meta name="title" content="Portfolio Review by DreamAction">
+  <meta name="og:title" content="Portfolio Review by DreamAction">
+  <meta name="description" content="Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
+  <meta name="og:description" content="Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
+  <meta name="og:image" content="assets/images/1-paper-portfolio.jpg">
+  <meta name="og:site_name" content="DreamAction">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@godreamaction">
+  <meta name="twitter:title" content="Portfolio Review by DreamAction">
+  <meta name="twitter:description" content="Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
+  <meta name="twitter:image" content="assets/images/1-paper-portfolio.jpg">
+  <meta name="twitter:creator" content="@godreamaction">
+
 
 </head>
 <body>
