added fb twitter

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   <meta name="og:title" content="Portfolio Review by DreamAction">
   <meta name="description" content="Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
   <meta name="og:description" content="Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
-  <meta name="og:image" content="assets/images/1-paper-portfolio.jpg">
+  <meta name="og:image" content="https://review.dreamaction.co/assets/images/1-paper-portfolio.jpg">
   <meta name="og:site_name" content="DreamAction">
 
   <!-- Twitter -->
@@ -38,7 +38,7 @@
   <meta name="twitter:site" content="@godreamaction">
   <meta name="twitter:title" content="Portfolio Review by DreamAction">
   <meta name="twitter:description" content="Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
-  <meta name="twitter:image" content="assets/images/1-paper-portfolio.jpg">
+  <meta name="twitter:image" content="https://review.dreamaction.co/assets/images/1-paper-portfolio.jpg">
   <meta name="twitter:creator" content="@godreamaction">
 
 
