--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
   <meta property="fb:app_id" content="214316472233662" />
   <meta name="title" content="Portfolio Review by DreamAction">
   <meta name="og:title" content="Portfolio Review by DreamAction">
-  <meta name="description" content="Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
-  <meta name="og:description" content="Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
+  <meta name="description" content="รีวิว Portfolio อย่างละเอียด เดือนละ 1 คน ฟรี! ไม่มีค่าใช้จ่าย โดยนักออกแบบ/สถาปนิก ผู้ชำนาญในการทำและคัดเลือก Portfolioในสายสถาปัตย์ ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋ง และโดดเด่นกว่าคนอื่น เพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
+  <meta name="og:description" content="รีวิว Portfolio อย่างละเอียด เดือนละ 1 คน ฟรี! ไม่มีค่าใช้จ่าย โดยนักออกแบบ/สถาปนิก ผู้ชำนาญในการทำและคัดเลือก Portfolioในสายสถาปัตย์ ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋ง และโดดเด่นกว่าคนอื่น เพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
   <meta name="og:image" content="https://review.dreamaction.co/assets/images/1-paper-portfolio.jpg">
   <meta name="og:site_name" content="DreamAction">
 
@@ -38,7 +38,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@godreamaction">
   <meta name="twitter:title" content="Portfolio Review by DreamAction">
-  <meta name="twitter:description" content="Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
+  <meta name="twitter:description" content="รีวิว Portfolio อย่างละเอียด เดือนละ 1 คน ฟรี! ไม่มีค่าใช้จ่าย โดยนักออกแบบ/สถาปนิก ผู้ชำนาญในการทำและคัดเลือก Portfolioในสายสถาปัตย์ ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋ง และโดดเด่นกว่าคนอื่น เพื่อเอาไปคว้างานหรือโรงเรียนในฝัน">
   <meta name="twitter:image" content="https://review.dreamaction.co/assets/images/1-paper-portfolio.jpg">
   <meta name="twitter:creator" content="@godreamaction">
 
